[package]
name = "docktape"
version = "0.1.0"
authors = ["spicheaubin <spicheaubin@devolutions.net>"]
description = "Wrapping the Docker API"
documentation = ""
homepage = ""
repository = ""
keywords = ["Docker", "wrapper", "hyper", "http", "unix"]
license = "MIT"

[dependencies]
hyper = "0.11"
futures = "0.1.21"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-uds = "0.1"
serde_json = "1.0.19"
hyperlocal = "0.4"

[[test]]
name = "server"
path = "tests/unix.rs"